src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <formula>npo02__Household__r.npo02__Formula_MailingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <formula>npo02__Household__r.npo02__HouseholdPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__Languages__c</fullName>
        <label>Languages - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDateHH__c</fullName>
        <formula>npo02__Household__r.npo02__LastCloseDate__c</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Level__c</fullName>
        <label>Level - DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Naming_Exclusions__c</fullName>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>Household__c.Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Formal_Greeting__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Informal_Greeting__c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYearHH__c</fullName>
        <formula>npo02__Household__r.npo02__OppAmountLastYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYearHH__c</fullName>
        <formula>npo02__Household__r.npo02__OppAmountThisYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Individual Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New or Edited Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contacts</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <formula>npo02__Household__r.npo02__TotalOppAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Open_Access_Client</value>
        </filters>
        <label>All Clients</label>
        <sharedTo>
            <group>Mid_West_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Midlands_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Age__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>Gender__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Open_Access_Client,Contact.NSP_Client</value>
        </filters>
        <label>All Midlands Clients</label>
        <sharedTo>
            <group>Midlands_NSP_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Midwest_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>Gender__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All Midwest Clients</label>
        <sharedTo>
            <group>Mid_West_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Access_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Open_Access_Client</value>
        </filters>
        <label>All Open Access Clients</label>
        <sharedTo>
            <group>Dublin_Open_Access</group>
            <group>Midlands_NSP_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.General_contact</value>
        </filters>
        <label>All General Contacts</label>
    </listViews>
    <listViews>
        <fullName>In_Stabilisation_Group</fullName>
        <columns>FULL_NAME</columns>
        <columns>Date_admitted_to_stabilisation_group__c</columns>
        <columns>Days_in_stabilisation__c</columns>
        <columns>Stabilisation_Meter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stabilisation_Group_status__c</field>
            <operation>equals</operation>
            <value>Admitted</value>
        </filters>
        <label>In Stabilisation Group</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NSP_Clients</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Service_area__c</columns>
        <columns>Gender__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>Age__c</columns>
        <columns>Last_NSP_Intervention__c</columns>
        <columns>Residing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NSP_Intervention_count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NSP_client__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All NSP Clients</label>
        <sharedTo>
            <group>Dublin_NSP_and_Open_Access_users</group>
            <group>Mid_West_Users</group>
            <group>Midlands_NSP_users</group>
            <group>North_East_NSP_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewClientsThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>NSP_client__c</columns>
        <columns>Open_Access_client__c</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Open_Access_Client</value>
        </filters>
        <label>New Clients This Week</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>ecass01__Contact_00NG0000008tiOpMAI</fullName>
        <active>true</active>
        <field>Contact.ecass01__GP__c</field>
        <filterItems>
            <field>Contact.ecass01__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Key Worker, Case Worker, Counsellor, GP, Probation Officer, Social worker</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_GP</name>
    </namedFilters>
    <namedFilters>
        <fullName>ecass01__Contact_00NG0000008viZMMAY</fullName>
        <active>true</active>
        <field>Contact.ecass01__Key_Worker__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>General contact</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_Key Worker</name>
    </namedFilters>
    <namedFilters>
        <fullName>ecass01__Contact_00NG0000008viZRMAY</fullName>
        <active>true</active>
        <field>Contact.ecass01__Case_Worker__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>General contact</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Contact_Case Worker</name>
    </namedFilters>
    <namedFilters>
        <fullName>ecass01__nf_01Ib0000000TUlbEAG_00Nb0000000iOU9EAM</fullName>
        <active>true</active>
        <errorMessage>You must select a client</errorMessage>
        <field>ecass01__Needle_Exchange__c.ecass01__Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <infoMessage>Showing only clients</infoMessage>
        <isOptional>false</isOptional>
        <name>Needle &amp; Syringe Exchange_Client</name>
    </namedFilters>
    <namedFilters>
        <fullName>ecass01__nf_01Ib0000000TaCsEAK_00Nb0000000iwfCEAQ</fullName>
        <active>true</active>
        <field>ecass01__Open_Access_attendance__c.ecass01__Who_did_induction__c</field>
        <filterItems>
            <field>Contact.ecass01__Member_of_staff__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <infoMessage>Showing only members of staff</infoMessage>
        <isOptional>true</isOptional>
        <name>Open Access attendance_Who did induction</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I110000000H5UEAU_00N11000000HoiCEAS</fullName>
        <active>true</active>
        <field>Detox_Client__c.GP__c</field>
        <filterItems>
            <field>Contact.ecass01__Contact_Type__c</field>
            <operation>equals</operation>
            <value>GP</value>
        </filterItems>
        <infoMessage>Showing only GPs</infoMessage>
        <isOptional>true</isOptional>
        <name>Detox Client_GP</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I110000000H5UEAU_00N11000000HsugEAC</fullName>
        <active>true</active>
        <field>Detox_Client__c.Attending_mental_health_professional__c</field>
        <filterItems>
            <field>Contact.ecass01__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Counsellor, GP</value>
        </filterItems>
        <infoMessage>Showing only Counsellors and GPs</infoMessage>
        <isOptional>true</isOptional>
        <name>Detox Client_Attending mental health pro</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I110000000H5UEAU_00N11000000HswIEAS</fullName>
        <active>true</active>
        <field>Detox_Client__c.Key_Worker__c</field>
        <filterItems>
            <field>Contact.ecass01__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Case Worker, Key Worker</value>
        </filterItems>
        <infoMessage>Showing only case workers and key workers</infoMessage>
        <isOptional>true</isOptional>
        <name>Detox Client_Key Worker</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I110000000JSfEAM_00N11000000IPfoEAG</fullName>
        <active>true</active>
        <field>Detox_Treatment__c.Key_Worker__c</field>
        <filterItems>
            <field>Contact.ecass01__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Key Worker</value>
        </filterItems>
        <infoMessage>Showing only key workers</infoMessage>
        <isOptional>true</isOptional>
        <name>Detox Treatment_Key Worker</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I110000000JSfEAM_00N11000000IPi4EAG</fullName>
        <active>true</active>
        <field>Detox_Treatment__c.Community_Detox_Doctor__c</field>
        <filterItems>
            <field>Contact.ecass01__Contact_Type__c</field>
            <operation>equals</operation>
            <value>GP</value>
        </filterItems>
        <infoMessage>Showing only GPs</infoMessage>
        <isOptional>true</isOptional>
        <name>Detox Treatment_Community Detox Doctor</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000TUlbEAG_00Nb0000000iOU9EAM</fullName>
        <active>true</active>
        <errorMessage>You must select a client</errorMessage>
        <field>Needle_Exchange__c.Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NSP Client, Open Access Client</value>
        </filterItems>
        <infoMessage>Showing only clients</infoMessage>
        <isOptional>false</isOptional>
        <name>Needle &amp; Syringe Exchange_Client</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000TZ9mEAG_00Nb0000000ip1HEAQ</fullName>
        <active>true</active>
        <errorMessage>Must be a member of staff</errorMessage>
        <field>Complaint__c.Staff_member__c</field>
        <filterItems>
            <field>Contact.Member_of_staff__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <infoMessage>Showing contacts with &quot;Member of staff&quot; checked</infoMessage>
        <isOptional>false</isOptional>
        <name>Complaint_Staff member</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000TaCsEAK_00Nb0000000iwbGEAQ</fullName>
        <active>true</active>
        <errorMessage>You must select a client</errorMessage>
        <field>Open_Access_attendance__c.Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NSP Client, Open Access Client</value>
        </filterItems>
        <infoMessage>showing only clients</infoMessage>
        <isOptional>false</isOptional>
        <name>Open Access_Client</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000TaCsEAK_00Nb0000000iwfCEAQ</fullName>
        <active>true</active>
        <field>Open_Access_attendance__c.Who_did_induction__c</field>
        <filterItems>
            <field>Contact.Member_of_staff__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <infoMessage>Showing only members of staff</infoMessage>
        <isOptional>true</isOptional>
        <name>Open Access attendance_Who did induction</name>
    </namedFilters>
    <recordTypes>
        <fullName>General_contact</fullName>
        <active>true</active>
        <description>Contacts who are not clients</description>
        <label>General contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSP_Client</fullName>
        <active>true</active>
        <description>NSP Clients</description>
        <label>NSP Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Access_Client</fullName>
        <active>true</active>
        <description>Open Access Clients</description>
        <label>Open Access Client</label>
    </recordTypes>
    <validationRules>
        <fullName>Contact_Preferred_Email</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL( npe01__Preferred_Email__c ,&quot;&quot;),
OR(
LEN(npe01__AlternateEmail__c  )&gt;0,
LEN(npe01__WorkEmail__c )&gt;0,
LEN(npe01__HomeEmail__c  )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__Preferred_Email__c</errorDisplayField>
        <errorMessage>Please select a Preferred Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Preferred_Phone</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(npe01__PreferredPhone__c ,&quot;&quot;),
OR(
 LEN(MobilePhone)&gt;0,
 LEN( npe01__WorkPhone__c)&gt;0,
 LEN( OtherPhone )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__PreferredPhone__c</errorDisplayField>
        <errorMessage>Please select a Preferred Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ecass01__Employment_status_other_specified</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT( ecass01__X11_Employement_Status__c ) = &quot;8. Other (specify)&quot; , ISBLANK( ecass01__X11_Employement_Status_other__c ))</errorConditionFormula>
        <errorDisplayField>ecass01__X11_Employement_Status_other__c</errorDisplayField>
        <errorMessage>If Employment status = 8. Other (specify), please complete Q11 Employment Status other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ecass01__Nationality_Other_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( ecass01__X10a_Nationality__c ) = &quot;2. Other&quot;,  ISBLANK( ecass01__X10a_Nationality_Other__c ))</errorConditionFormula>
        <errorDisplayField>ecass01__X10a_Nationality_Other__c</errorDisplayField>
        <errorMessage>If 2, please complete 10a Nationality Other</errorMessage>
    </validationRules>
</CustomObject>